--- a/src/gui/SellerList.fxml
+++ b/src/gui/SellerList.fxml
@@ -25,6 +25,9 @@
         <columns>
           <TableColumn fx:id="tableColummId" prefWidth="75.0" text="Id" />
           <TableColumn fx:id="tableColummName" prefWidth="75.0" text="Name" />
+            <TableColumn fx:id="tableColummEmail" prefWidth="75.0" text="Email" />
+            <TableColumn fx:id="tableColummBirthDate" prefWidth="75.0" text="BirthDate" />
+            <TableColumn fx:id="tableColummBaseSalary" prefWidth="75.0" text="BaseSalary" />
             <TableColumn fx:id="tableColumnEDIT" prefWidth="75.0" />
             <TableColumn fx:id="tableColumnREMOVE" prefWidth="75.0" />
         </columns>
